debug overflow issue with home page on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -339,12 +339,16 @@ a:visited {
     overflow-x: hidden;
   }
 
+  .home {
+    overflow-y:hidden;
+    height: max-content;
+  }
+
   .home_link {
     padding: 0px;
     float: left;
     margin: -84% auto 5px 2.75% ;
     position: fixed;
-
   }
   
   .home_icon {
@@ -390,7 +394,10 @@ a:visited {
   .nav_bar {
     display: grid;
     flex-direction: column;
-    margin-top: 0;
+    margin-top: -20px;
+    margin-bottom: -30px;
+    position: relative;
+    overflow-y: hidden;
   }
   
   .nav_tiles {
@@ -404,7 +411,7 @@ a:visited {
   }
 
   .welcome_message_container {
-    margin: 30px auto -40px auto;
+    margin: 20px auto 40px auto;
     width: 95%;
   }
   
